# aggregator

./: .clang-format  .gitignore  CMakeLists.txt  aggregator.cpp  aggregator.h  main.cpp  request.h
data/: aggregation_result.xml  report.xml
